some fixing updates

--- a/frontend/src/locales/ar.json
+++ b/frontend/src/locales/ar.json
@@ -70,7 +70,11 @@
         "recentActivityDescription": "أنشطتك وتحديثاتك الأخيرة",
         "quickActions": "الإجراءات السريعة",
         "quickActionsDescription": "المهام الشائعة والاختصارات",
-        "stats": "الإحصائيات"
+        "stats": "الإحصائيات",
+        "totalInterviews": "إجمالي المقابلات",
+        "completedInterviews": "المكتملة",
+        "learningProgress": "تقدم التعلم",
+        "averageRating": "متوسط التقييم"
     },
     "interviews": {
         "subtitle": "إدارة مقابلاتك وجلسات التدريب",
@@ -79,6 +83,7 @@
         "myInterviewsDescription": "مقابلاتك المجدولة والمكتملة",
         "availableSlots": "المواعيد المتاحة",
         "availableSlotsDescription": "احجز موعداً لمقابلتك القادمة",
+        "viewAll": "عرض جميع المواعيد",
         "bookSlot": "حجز موعد",
         "cancelSlot": "إلغاء الموعد",
         "rescheduleSlot": "إعادة جدولة الموعد",
@@ -91,10 +96,13 @@
         "subtitle": "طور مهاراتك مع مواردنا التعليمية",
         "articles": "المقالات",
         "articlesDescription": "اقرأ أحدث المقالات والأدلة",
+        "browseArticles": "تصفح المقالات",
         "faqs": "الأسئلة الشائعة",
         "faqsDescription": "الأسئلة والأجوبة المتكررة",
+        "viewFAQs": "عرض الأسئلة الشائعة",
         "tips": "النصائح",
         "tipsDescription": "نصائح الخبراء وأفضل الممارسات",
+        "getTips": "احصل على النصائح",
         "categories": "الفئات",
         "readMore": "اقرأ المزيد",
         "readingTime": "وقت القراءة",
@@ -106,11 +114,23 @@
         "subtitle": "إدارة حسابك وتفضيلاتك",
         "editProfile": "تعديل الملف الشخصي",
         "changeAvatar": "تغيير الصورة",
+        "changePhoto": "تغيير الصورة",
         "updatePassword": "تحديث كلمة المرور",
+        "changePassword": "تغيير كلمة المرور",
+        "changePasswordDescription": "تحديث كلمة مرور حسابك",
+        "saveChanges": "حفظ التغييرات",
         "accountSettings": "إعدادات الحساب",
         "accountSettingsDescription": "إدارة تفضيلات حسابك",
         "personalInfo": "المعلومات الشخصية",
         "personalInfoDescription": "معلوماتك الأساسية وتفاصيل الاتصال",
+        "profilePicture": "الصورة الشخصية",
+        "profilePictureDescription": "رفع وإدارة صورتك الشخصية",
+        "preferences": "التفضيلات",
+        "preferencesDescription": "تخصيص تجربتك",
+        "phone": "رقم الهاتف",
+        "bio": "النبذة الشخصية",
+        "bioPlaceholder": "أخبرنا عن نفسك...",
+        "timezone": "المنطقة الزمنية",
         "language": "اللغة",
         "notifications": "الإشعارات",
         "privacy": "الخصوصية",
