--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -70,7 +70,11 @@
         "recentActivityDescription": "Your latest activities and updates",
         "quickActions": "Quick Actions",
         "quickActionsDescription": "Common tasks and shortcuts",
-        "stats": "Statistics"
+        "stats": "Statistics",
+        "totalInterviews": "Total Interviews",
+        "completedInterviews": "Completed",
+        "learningProgress": "Learning Progress",
+        "averageRating": "Average Rating"
     },
     "interviews": {
         "subtitle": "Manage your interviews and practice sessions",
@@ -79,6 +83,7 @@
         "myInterviewsDescription": "Your scheduled and completed interviews",
         "availableSlots": "Available Slots",
         "availableSlotsDescription": "Book a slot for your next interview",
+        "viewAll": "View All Slots",
         "bookSlot": "Book Slot",
         "cancelSlot": "Cancel Slot",
         "rescheduleSlot": "Reschedule Slot",
@@ -91,10 +96,13 @@
         "subtitle": "Enhance your skills with our learning resources",
         "articles": "Articles",
         "articlesDescription": "Read the latest articles and guides",
+        "browseArticles": "Browse Articles",
         "faqs": "FAQs",
         "faqsDescription": "Frequently asked questions and answers",
+        "viewFAQs": "View FAQs",
         "tips": "Tips",
         "tipsDescription": "Expert tips and best practices",
+        "getTips": "Get Tips",
         "categories": "Categories",
         "readMore": "Read More",
         "readingTime": "Reading Time",
@@ -106,11 +114,23 @@
         "subtitle": "Manage your account and preferences",
         "editProfile": "Edit Profile",
         "changeAvatar": "Change Avatar",
+        "changePhoto": "Change Photo",
         "updatePassword": "Update Password",
+        "changePassword": "Change Password",
+        "changePasswordDescription": "Update your account password",
+        "saveChanges": "Save Changes",
         "accountSettings": "Account Settings",
         "accountSettingsDescription": "Manage your account preferences",
         "personalInfo": "Personal Information",
         "personalInfoDescription": "Your basic information and contact details",
+        "profilePicture": "Profile Picture",
+        "profilePictureDescription": "Upload and manage your profile photo",
+        "preferences": "Preferences",
+        "preferencesDescription": "Customize your experience",
+        "phone": "Phone Number",
+        "bio": "Bio",
+        "bioPlaceholder": "Tell us about yourself...",
+        "timezone": "Timezone",
         "language": "Language",
         "notifications": "Notifications",
         "privacy": "Privacy",
