making validation using zod for frontend and complete connecting with backend properly

--- a/frontend/src/locales/ar.json
+++ b/frontend/src/locales/ar.json
@@ -214,10 +214,28 @@
     "validation": {
         "required": "هذا الحقل مطلوب",
         "email": "يرجى إدخال بريد إلكتروني صحيح",
+        "emailRequired": "البريد الإلكتروني مطلوب",
         "password": "كلمة المرور يجب أن تكون 6 أحرف على الأقل",
+        "passwordRequired": "كلمة المرور مطلوبة",
+        "passwordComplex": "كلمة المرور يجب أن تحتوي على حرف صغير وحرف كبير ورقم واحد على الأقل",
         "passwordMatch": "كلمات المرور غير متطابقة",
+        "confirmPasswordRequired": "يرجى تأكيد كلمة المرور",
         "minLength": "الحد الأدنى للطول هو {{min}} أحرف",
-        "maxLength": "الحد الأقصى للطول هو {{max}} أحرف"
+        "maxLength": "الحد الأقصى للطول هو {{max}} أحرف",
+        "nameMin": "الاسم يجب أن يكون حرفين على الأقل",
+        "nameMax": "الاسم يجب ألا يتجاوز 50 حرفاً",
+        "invalidRole": "الدور يجب أن يكون متقدم أو محاور أو مدير",
+        "invalidLanguage": "اللغة يجب أن تكون en أو ar",
+        "yearsOfExperienceRequired": "سنوات الخبرة مطلوبة",
+        "yearsOfExperienceNumber": "سنوات الخبرة يجب أن تكون رقماً",
+        "yearsOfExperienceInteger": "سنوات الخبرة يجب أن تكون عدداً صحيحاً",
+        "yearsOfExperienceMin": "سنوات الخبرة لا يمكن أن تكون سالبة",
+        "yearsOfExperienceMax": "سنوات الخبرة يجب ألا تتجاوز 50",
+        "specializationRequired": "يرجى اختيار تخصص صحيح",
+        "fileRequired": "الملف مطلوب",
+        "fileSizeExceeded": "حجم الملف يجب أن يكون أقل من {{size}} ميجابايت",
+        "fileTypeInvalid": "يرجى تحميل ملف صحيح ({{types}})",
+        "selectSpecialization": "اختر التخصص..."
     },
     "admin": {
         "subtitle": "إدارة المنصة وأنشطة المستخدمين",
