--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -214,10 +214,28 @@
     "validation": {
         "required": "This field is required",
         "email": "Please enter a valid email",
+        "emailRequired": "Email is required",
         "password": "Password must be at least 6 characters",
+        "passwordRequired": "Password is required",
+        "passwordComplex": "Password must contain at least one lowercase letter, one uppercase letter, and one number",
         "passwordMatch": "Passwords do not match",
+        "confirmPasswordRequired": "Please confirm your password",
         "minLength": "Minimum length is {{min}} characters",
-        "maxLength": "Maximum length is {{max}} characters"
+        "maxLength": "Maximum length is {{max}} characters",
+        "nameMin": "Name must be at least 2 characters long",
+        "nameMax": "Name must not exceed 50 characters",
+        "invalidRole": "Role must be candidate, interviewer, or admin",
+        "invalidLanguage": "Language must be en or ar",
+        "yearsOfExperienceRequired": "Years of experience is required",
+        "yearsOfExperienceNumber": "Years of experience must be a number",
+        "yearsOfExperienceInteger": "Years of experience must be an integer",
+        "yearsOfExperienceMin": "Years of experience cannot be negative",
+        "yearsOfExperienceMax": "Years of experience must not exceed 50",
+        "specializationRequired": "Please select a valid specialization",
+        "fileRequired": "File is required",
+        "fileSizeExceeded": "File size must be less than {{size}}MB",
+        "fileTypeInvalid": "Please upload a valid file ({{types}})",
+        "selectSpecialization": "Select specialization..."
     },
     "admin": {
         "subtitle": "Manage the platform and user activities",
