--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -205,6 +205,7 @@
         "actions": "Actions",
         "noData": "No data available",
         "tryAgain": "Try Again",
+        "viewAll": "View All",
         "quickLinks": "Quick Links",
         "support": "Support",
         "help": "Help",
