--- a/frontend/src/locales/ar.json
+++ b/frontend/src/locales/ar.json
@@ -275,11 +275,69 @@
     "admin": {
         "subtitle": "إدارة المنصة وأنشطة المستخدمين",
         "users": "المستخدمون",
-        "usersDescription": "إدارة حسابات المستخدمين والأذونات",
+        "usersDescription": "إدارة حسابات المستخدمين والصلاحيات",
         "sessions": "الجلسات",
-        "sessionsDescription": "مراقبة الجلسات النشطة والمقابلات",
+        "sessionsDescription": "مراقبة الجلسات والمقابلات النشطة",
         "content": "المحتوى",
-        "contentDescription": "إدارة المحتوى التعليمي والمقالات"
+        "contentDescription": "إدارة المحتوى التعليمي والمقالات",
+        "dashboardTitle": "مركز التحكم",
+        "overview": "نظرة عامة على المنصة وصحتها",
+        "quickActionsDescription": "انتقل بسرعة إلى الأدوات التي تديرها يومياً",
+        "stats": {
+            "totalUsers": "إجمالي المستخدمين",
+            "activeUsers": "{{count}} نشط الآن",
+            "pendingInterviewers": "محاورون قيد الانتظار",
+            "reservations": "الحجوزات",
+            "pendingReservations": "{{count}} بانتظار الرد",
+            "sessions": "الجلسات",
+            "upcomingSessions": "{{count}} قادمة",
+            "content": "مواد التعلم",
+            "publishedContent": "{{count}} منشورة",
+            "slots": "المواعيد",
+            "evaluations": "التقييمات",
+            "avgScore": "متوسط التقييم",
+            "records": "سجلات"
+        },
+        "trends": {
+            "users": "نمو المستخدمين",
+            "reservations": "زخم الحجوزات",
+            "lastDays": "آخر {{count}} أيام",
+            "vsLastWeek": "مقارنة بالأسبوع الماضي",
+            "noData": "لا توجد بيانات كافية للعرض"
+        },
+        "pendingSection": {
+            "title": "طلبات المحاورين",
+            "description": "راجع ووافق على طلبات المحاورين الجدد",
+            "empty": "لا يوجد محاورون بانتظار الموافقة 🎉",
+            "cv": "عرض السيرة الذاتية"
+        },
+        "recentActivity": {
+            "title": "النشاط الأخير",
+            "subtitle": "راقب كل جديد داخل المنصة",
+            "description": "الجلسات القادمة التي تحتاج متابعتك",
+            "newUsers": "أعضاء جدد",
+            "reservations": "أحدث الحجوزات",
+            "sessions": "الجلسات القادمة",
+            "empty": "لا يوجد نشاط حالياً"
+        },
+        "system": {
+            "title": "صحة النظام",
+            "uptime": "مدة التشغيل",
+            "uptimeValue": "حوالي {{hours}}س {{minutes}}د",
+            "lastUpdated": "آخر تحديث",
+            "quickActions": "إجراءات سريعة",
+            "users": "إدارة المستخدمين",
+            "interviews": "إدارة الجداول",
+            "learning": "إدارة التعلم"
+        },
+        "actions": {
+            "approve": "موافقة",
+            "reject": "رفض"
+        },
+        "approveSuccess": "تمت الموافقة على المحاور بنجاح",
+        "rejectSuccess": "تم رفض المحاور بنجاح",
+        "trendUp": "نمو",
+        "trendDown": "انخفاض"
     },
     "schedules": {
         "createSchedule": "إنشاء جدول",
