after refused the interviewer , remove him from database

--- a/frontend/src/locales/ar.json
+++ b/frontend/src/locales/ar.json
@@ -318,7 +318,7 @@
             "newUsers": "أعضاء جدد",
             "reservations": "أحدث الحجوزات",
             "sessions": "الجلسات القادمة",
-            "empty": "لا يوجد نشاط حالياً"
+            "empty": "لا يوجد شيء للعرض بعد"
         },
         "system": {
             "title": "صحة النظام",
