dashboard of interviews completed

--- a/frontend/src/locales/ar.json
+++ b/frontend/src/locales/ar.json
@@ -355,7 +355,23 @@
         "allStatuses": "جميع الحالات",
         "clearFilters": "مسح الفلاتر",
         "showingResults": "عرض {{count}} مستخدم",
-        "noUsersFound": "لم يتم العثور على مستخدمين يطابقون الفلاتر"
+        "noUsersFound": "لم يتم العثور على مستخدمين يطابقون الفلاتر",
+        "reservationsSlots": "الحجوزات والفترات الزمنية",
+        "completedReservations": "جميع الحجوزات",
+        "completedReservationsDescription": "عرض وإدارة جميع الحجوزات",
+        "completedSlots": "جميع الفترات الزمنية",
+        "completedSlotsDescription": "عرض وإدارة جميع الفترات الزمنية",
+        "searchReservations": "البحث باسم المرشح أو المحاور...",
+        "searchSlots": "البحث باسم المحاور أو عنوان الجدول...",
+        "dateFrom": "من التاريخ",
+        "dateTo": "إلى التاريخ",
+        "filterByDate": "التاريخ",
+        "deleteReservationSuccess": "تم حذف الحجز بنجاح",
+        "deleteSlotSuccess": "تم حذف الفترة الزمنية بنجاح",
+        "deleteReservationConfirmTitle": "حذف الحجز",
+        "deleteReservationConfirm": "هل أنت متأكد من حذف هذا الحجز؟ لا يمكن التراجع عن هذا الإجراء.",
+        "deleteSlotConfirmTitle": "حذف الفترة الزمنية",
+        "deleteSlotConfirm": "هل أنت متأكد من حذف هذه الفترة الزمنية؟ لا يمكن التراجع عن هذا الإجراء."
     },
     "schedules": {
         "createSchedule": "إنشاء جدول",
