--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -350,7 +350,23 @@
         "allStatuses": "All Statuses",
         "clearFilters": "Clear Filters",
         "showingResults": "Showing {{count}} users",
-        "noUsersFound": "No users found matching your filters"
+        "noUsersFound": "No users found matching your filters",
+        "reservationsSlots": "Reservations & Slots",
+        "completedReservations": "All Reservations",
+        "completedReservationsDescription": "View and manage all reservations",
+        "completedSlots": "All Slots",
+        "completedSlotsDescription": "View and manage all slots",
+        "searchReservations": "Search by candidate or interviewer name...",
+        "searchSlots": "Search by interviewer name or schedule title...",
+        "dateFrom": "From Date",
+        "dateTo": "To Date",
+        "filterByDate": "Date",
+        "deleteReservationSuccess": "Reservation deleted successfully",
+        "deleteSlotSuccess": "Slot deleted successfully",
+        "deleteReservationConfirmTitle": "Delete Reservation",
+        "deleteReservationConfirm": "Are you sure you want to delete this reservation? This action cannot be undone.",
+        "deleteSlotConfirmTitle": "Delete Slot",
+        "deleteSlotConfirm": "Are you sure you want to delete this slot? This action cannot be undone."
     },
     "schedules": {
         "createSchedule": "Create Schedule",
